--- a/Assets/UI/Uxml/HealthUI.uss
+++ b/Assets/UI/Uxml/HealthUI.uss
@@ -1,6 +1,7 @@
 .health-bar--container {
     width: 200px;
     height: 70px;
+    position: absolute;
 }
 
 .health-bar--background {
@@ -11,16 +12,17 @@
 }
 
 .health-bar--filling {
-    background-image: url('/Assets/UI/Elements/ui_health_grayscale.png');
+    background-image: url("project://database/Assets/UI/Elements/ui_health_grayscale.png?fileID=21300000&guid=48a24f809ef4043ce904e20967c3c963&type=3#ui_health_grayscale");
     width: 100%;
     height: 100%;
     -unity-background-image-tint-color: rgb(255, 0, 0);
     position: absolute;
     flex-grow: 1;
+    -unity-background-scale-mode: scale-and-crop;
 }
 
 .health-bar--frame {
-    background-image: url('/Assets/UI/Elements/ui_health_tube.png');
+    background-image: url("project://database/Assets/UI/Elements/ui_health_tube.png?fileID=21300000&guid=ad5a7cd46a9e54c15a009f2203c2967b&type=3#ui_health_tube");
     width: 100%;
     height: 100%;
     position: absolute;
@@ -29,4 +31,12 @@
 
 .health-bar--hidden {
     display: none;
+}
+
+.health-bar--container_current {
+    flex-grow: 1;
+    overflow: hidden;
+    align-items: flex-start;
+    align-self: flex-start;
+    align-content: center;
 }
